changed some filler text

--- a/index.html
+++ b/index.html
@@ -77,14 +77,12 @@
                     <!-- newest post -->
 
                     <article class="newest-post" id="newest-post">
-                        <h2 class="newest-post__h2">
-                            Lorem ipsum dolor sit amet.
-                        </h2>
+                        <h2 class="newest-post__h2">Basic Mashed Potatoes</h2>
                         <h3 class="newest-post__h3">April 20th, 2021</h3>
                         <iframe
                             width="560"
                             height="315"
-                            src="https://www.youtube.com/embed/BmsJdtrYMvk"
+                            src="https://www.youtube.com/embed/IDu5czNIM1w"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -92,72 +90,51 @@
                         ></iframe>
 
                         <p class="newest-post__p" id="yaboiii">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Qui in odit dicta dolorem non sequi, rerum
-                            consequatur ipsa dolore quasi sint ratione repellat
-                            provident debitis totam officiis ea et esse possimus
-                            beatae aut, ad, placeat alias. Quaerat excepturi
-                            exercitationem nam impedit molestiae natus suscipit
-                            ratione dolore ea beatae vitae odio architecto
-                            fugiat repellat voluptate, illum tenetur modi
-                            facilis nobis, ex vel placeat...
+                            Bring a pot of salted water to a boil. Add potatoes
+                            and cook until tender but still firm, about 15
+                            minutes; drain. In a small saucepan heat butter and
+                            milk over low heat until butter is melted. Using a
+                            potato masher or electric beater, slowly blend milk
+                            mixture into potatoes until smooth and creamy.
+                            Season with salt and pepper to taste.
                         </p>
                         <!-- hidden content until read more is clicked -->
                         <div class="newest-post--hidden" id="hidden">
                             <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Quam labore molestias
-                                deserunt, fuga, maiores odit quia nisi qui
-                                repellendus sequi dicta eaque tenetur quae,
-                                recusandae assumenda laborum. Provident
-                                reprehenderit, commodi, aperiam amet molestiae
-                                voluptate soluta cum mollitia delectus nostrum
-                                velit quas sit quos qui harum ducimus, rem
-                                aliquid omnis!
+                                I have been making mashed potatoes like this for
+                                over 50 years...and it's the way MY mother made
+                                them. For this recipe to be a success, you have
+                                to know a little about potatoes. Notice the
+                                recipe called for BAKING potatoes...
                             </p>
 
                             <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Quam labore molestias
-                                deserunt, fuga, maiores odit quia nisi qui
-                                repellendus sequi dicta eaque tenetur quae,
-                                recusandae assumenda laborum. Provident
-                                reprehenderit, commodi, aperiam amet molestiae
-                                voluptate soluta cum mollitia delectus nostrum
-                                velit quas sit quos qui harum ducimus, rem
-                                aliquid omnis! Ea fuga, obcaecati assumenda
-                                labore autem
+                                Great recipe for "good old fashioned" mashed
+                                potatoes! It's straight forward and just plain
+                                delicious. The perfect mashed potato for your
+                                favorite gravy! I always heat up my milk in the
+                                microwave and add it to the...
                             </p>
                             <blockquote>
-                                "Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Totam quis vel quibusdam,
-                                dolore, error consectetur autem libero ullam
-                                suscipit delectus dicta voluptas facere sed! Id
-                                exercitationem laboriosam rem numquam,
-                                distinctio suscipit repudiandae excepturi ipsa
-                                similique, vitae sequi esse ut iure molestiae
-                                aliquam perspiciatis. Quos, sunt?"
+                                This recipe is not bad but I added all the milk
+                                in and the mash potato became too runny (like
+                                soup). I'll say not to add all the milk this
+                                recipe suggested. Just add a little milk a time
+                                until u think it's the texture u want and that's
+                                it. Then
                             </blockquote>
                             <p>
-                                reprehenderit dolor impedit amet expedita, ex
-                                accusamus repellendus modi in perferendis animi?
-                                Voluptatibus recusandae minus enim ratione?
-                                Error dolorem libero perferendis ipsa, earum
-                                nobis atque ducimus laudantium obcaecati labore
-                                et sit sequi, nisi ab enim ex asperiores soluta
-                                delectus tempore assumenda neque ipsam quo! Et.
+                                Sometimes the simplest recipes are the best!
+                                Smash the potatoes to mostly lump-free before
+                                adding the butter and milk. One thing I suggest
+                                doing differently is to add the butter to the
+                                potatoes first, then add heated milk as needed.
                             </p>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Maiores laboriosam
-                                perspiciatis accusantium quae sit, dolore
-                                reiciendis, aspernatur quas exercitationem quos
-                                iste aut impedit voluptates voluptatem sint
-                                numquam ipsam eum magnam saepe eligendi dolores.
-                                Voluptate molestias facere, necessitatibus
-                                architecto quis voluptates rem pariatur modi
-                                nostrum voluptas quisquam error tempora
-                                perspiciatis dicta.
+                                There isn't enough butter in these mashed
+                                potatoes, you should have a least a stick of
+                                butter. I make mashed potatoes all the time and
+                                everyone just loves my potatoes.
                             </p>
                         </div>
                         <!-- read more button / back to top button-->
