--- a/pages/404.html
+++ b/pages/404.html
@@ -14,10 +14,10 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="../styles.css" />
-        <title>its yaboiii</title>
+        <title>404</title>
     </head>
     <body id="body">
-     <!-- i needed to make two seperate nav bars because it wouldnt behave the way i wanted it to. the desktop navbar is sticky
+        <!-- i needed to make two seperate nav bars because it wouldnt behave the way i wanted it to. the desktop navbar is sticky
             while the mobile navbar is fixed. in the long run this is probably a bad solution so I should try to make a better design in the future-->
         <!-- mobile nav bar -->
         <nav class="navbar" id="mobile-navbar">
@@ -53,7 +53,8 @@
                         <li class="nav__li theme">
                             <i
                                 class="fas fa-adjust fa-md modeToggle"
-                                id="modeToggleDesktop">
+                                id="modeToggleDesktop"
+                            >
                             </i>
                         </li>
                         <li class="nav__li">
