--- a/pages/404.html
+++ b/pages/404.html
@@ -20,7 +20,7 @@
         <!-- i needed to make two seperate nav bars because it wouldnt behave the way i wanted it to. the desktop navbar is sticky
             while the mobile navbar is fixed. in the long run this is probably a bad solution so I should try to make a better design in the future-->
         <!-- mobile nav bar -->
-        <nav class="navbar" id="mobile-navbar">
+        <!-- <nav class="navbar" id="mobile-navbar">
             <i class="fas fa-bars fa-2x" id="hamburger"></i>
             <ul class="navbar__ul" id="navbar__ul-mobile">
                 <li class="nav__li theme" id="modeToggle">
@@ -35,7 +35,7 @@
                 <li class="nav__li"><a href="pages/404.html">CONTACT</a></li>
             </ul>
         </nav>
-        <div id="darken"></div>
+        <div id="darken"></div> -->
 
         <!-- grid -->
         <div class="grid-container">
@@ -107,8 +107,9 @@
             class="newest-post"
             id="newest-post"
         ></article>
+        <script src="../navBar.js"></script>
         <script src="../script.js"></script>
     </body>
 
-    <!-- this is so the javascript will work -->
+    
 </html>
