--- a/pages/404.html
+++ b/pages/404.html
@@ -49,6 +49,7 @@
             <section class="grid-item-2 content" id="content">
                 <!-- desktop sticky nav bar -->
                 <nav class="navbar" id="sticky-navbar">
+                    <i class="fas fa-bars fa-2x" id="hamburger"></i>
                     <ul class="navbar__ul" id="navbar__ul-desktop">
                         <li class="nav__li theme">
                             <i
@@ -58,7 +59,7 @@
                             </i>
                         </li>
                         <li class="nav__li">
-                            <a href="pages/404.html">BLOG</a>
+                            <a href="pages/404.html">ABOUT</a>
                         </li>
                         <li class="nav__li">
                             <a href="pages/404.html">DROPS</a>
@@ -71,6 +72,7 @@
                         </li>
                     </ul>
                 </nav>
+                <div id="darken"></div>
                 <!-- content -->
                 <div class="error-message" id="error">
                     <i
@@ -107,7 +109,7 @@
             class="newest-post"
             id="newest-post"
         ></article>
-        <script src="../navBar.js"></script>
+        
         <script src="../script.js"></script>
     </body>
 
