changed hamburger size - made it smaller

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section class="grid-item-2 content" id="content">
                 <!-- desktop sticky nav bar -->
                 <nav class="navbar" id="sticky-navbar">
-                    <i class="fas fa-bars fa-2x" id="hamburger"></i>
+                    <i class="fas fa-bars fa-lg" id="hamburger"></i>
                     <ul class="navbar__ul" id="navbar__ul-desktop">
                         <li class="nav__li theme">
                             <i
