--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
           <!--   sidebar     -->
                 <div class="main-content__sidebar">
                   
-                  <div class="sidebar__itemWrap">
-                    <!-- <h3>recent posts</h3> -->
-                    <div class="sidebar__item">1</div>
-                    <div class="sidebar__item">2</div>
-                    <div class="sidebar__item">3</div>
+                  <div class="sidebar-wrap">
+                    <h3 class="sidebar__h3">recent posts</h3>
+                    <div class="sidebar__item-wrap">
+                        <div class="sidebar__item">1</div>
+                        <div class="sidebar__item">2</div>
+                        <div class="sidebar__item">3</div>
+                    </div>
                   </div>
                 </div>
           <!--   main article     -->
