added more filler content and changed some colors and stuff

--- a/index.html
+++ b/index.html
@@ -65,9 +65,18 @@
                   <div class="sidebar-wrap">
                     <h3 class="sidebar__h3">recent posts</h3>
                     <div class="sidebar__item-wrap">
-                        <div class="sidebar__item">1</div>
-                        <div class="sidebar__item">2</div>
-                        <div class="sidebar__item">3</div>
+                        <!-- sidebar item 1 -->
+                        <div class="sidebar__item">
+                            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/N98bqKITuyM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <!-- sidebar item 2 -->
+                        <div class="sidebar__item">
+                            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/palrnDMWreg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <!-- sidebar item 3 -->
+                        <div class="sidebar__item">
+                            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/d1gG7K-NV1o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                     </div>
                   </div>
                 </div>
@@ -150,12 +159,12 @@
                 <!-- footer -->
                 <div class="footer__content">
                     <a href="https://www.instagram.com"
-                        ><i class="fab fa-instagram fa-lg"></i
+                        ><i class="fab fa-instagram fa-2x"></i
                     ></a>
                     <a href="https://www.twitter.com"
-                        ><i class="fab fa-twitter fa-lg"></i
+                        ><i class="fab fa-twitter fa-2x"></i
                     ></a>
-                    <i class="fas fa-envelope fa-lg"></i>
+                    <i class="fas fa-envelope fa-2x"></i>
                 </div>
             </div>
           </section>  
