cant stop tweakin stuff

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="main-content__sidebar">
                   
                   <div class="sidebar-wrap">
-                    <h3 class="sidebar__h3">recent posts</h3>
+                    <h3 class="sidebar__h3">Recent Posts</h3>
                     <div class="sidebar__item-wrap">
                         <!-- sidebar item 1 -->
                         <div class="sidebar__item">
