--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
           <!--   main article     -->
                 <article class="main-content__article">
                   <main class="article__content">
-                        <h2 class="newest-post__h2">Basic Mashed Potatoes</h2>
-                        <h3 class="newest-post__h3">April 20th, 2021</h3>
-                        <div class="iframe-wrap">
+                        <div class="title-wrap">
+                            <h2 class="newest-post__h2">Basic Mashed Potatoes</h2>
+                            <h3 class="newest-post__h3">April 20th, 2021</h3>
+                        </div>
                             <iframe
                                 width="560"
                                 height="315"
@@ -95,7 +96,7 @@
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen
                             ></iframe>
-                        </div>
+                       
 
                         <p class="newest-post__p" id="yaboiii">
                             Bring a pot of salted water to a boil. Add potatoes
