re doing the light mode

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <li class="nav__li theme">
                                 <i
                                     class="fas fa-adjust fa-md modeToggle"
-                                    id="modeToggleDesktop"
+                                    id="modeToggle"
                                 >
                                 </i>
                             </li>
