--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="It's yaboiii blog and content">
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <script
             src="https://kit.fontawesome.com/207165ede1.js"
@@ -20,7 +21,7 @@
         <section class="grid-container">
             <header class="grid-container__header" id="header">
                 <div class="header__logo" id="logo">
-                    <img src="images/iphone5noBG.png" alt="" />
+                    <img src="images/iphone5noBG.png" alt="Yaboiii Logo" />
                 </div>
             </header>
 
