--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             <div class="grid-container__main-content">
                 <!--  nav    -->
                 <div class="nav-wrap">
+                    <i class="fas fa-bars fa-lg" id="hamburger"></i>
                     <nav class="sticky-nav" id="sticky-navbar">
-                        <i class="fas fa-bars fa-lg" id="hamburger"></i>
+                  
+                        <i class="fas fa-times fa-lg" id="close"></i>
                         <ul class="navbar__ul" id="navbar__ul-desktop">
                             <li class="nav__li theme">
                                 <i
@@ -39,7 +41,7 @@
                                 </i>
                             </li>
                             <li class="nav__li">
-                                <a href="pages/404.html">ABOUT</a>
+                                <a href="#">ABOUT</a>
                             </li>
                             <li class="nav__li">
                                 <a href="pages/404.html">DROPS</a>
