will this work?

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <!--  nav    -->
                 <div class="nav-wrap">
                     <i class="fas fa-bars fa-lg" id="hamburger"></i>
-                    <nav class="sticky-nav" id="sticky-navbar">h
+                    <nav class="sticky-nav" id="sticky-navbar">
                   
                         <i class="fas fa-times fa-lg" id="close"></i>
                         <ul class="navbar__ul" id="navbar__ul-desktop">
