--- a/index.html
+++ b/index.html
@@ -67,26 +67,26 @@
                                 <!-- sidebar item 1 -->
                                 <div class="sidebar__item">
                                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Uf8iG-cCM7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                    <div class="sidebar__item-info">
+                                    <a href="https://www.youtube.com"  class="sidebar__item-info">
                                         <h4 class="item-info__h4">Big and bold flavor</h4>
                                         <p class="item-info__p">Gordan Ramsay puts his dick in the salad</p>
-                                    </div>
+                                    </a>
                                 </div>
                                 <!-- sidebar item 2 -->
                                 <div class="sidebar__item">
                                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Fte3ey3L-48" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                    <div class="sidebar__item-info">
+                                    <a href="https://www.youtube.com"  class="sidebar__item-info">
                                         <h4 class="item-info__h4">9 minutes of Gordan Ramsey yelling</h4>
                                         <p class="item-info__p">Gordan threatens a customer</p>
-                                    </div>
+                                    </a>
                                 </div>
                                 <!-- sidebar item 3 -->
                                 <div class="sidebar__item">
                                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Cyskqnp1j64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                    <div class="sidebar__item-info">
+                                    <a href="https://www.youtube.com" class="sidebar__item-info">
                                         <h4 class="item-info__h4">Beef Wellington</h4>
                                         <p class="item-info__p">its not just raw...its fucking raw</p>
-                                    </div>
+                                    </a>
                                 </div>
                             </div>
                         </div>
