highlight on hover for sidebar items

--- a/index.html
+++ b/index.html
@@ -102,15 +102,7 @@
                                     April 20th, 2021
                                 </h3>
                             </div>
-                            <iframe
-                                width="560"
-                                height="315"
-                                src="https://www.youtube.com/embed/IDu5czNIM1w"
-                                title="YouTube video player"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen
-                            ></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/8_GU4BVCMPA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                             <p class="newest-post__p" id="yaboiii">
                                 Bring a pot of salted water to a boil. Add
