added a overlay gradient for the newest post first paragraph

--- a/index.html
+++ b/index.html
@@ -109,18 +109,28 @@
                                     April 20th, 2021
                                 </h3>
                             </div>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/8_GU4BVCMPA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-                            <p class="newest-post__p" id="yaboiii">
-                                Bring a pot of salted water to a boil. Add
-                                potatoes and cook until tender but still firm,
-                                about 15 minutes; drain. In a small saucepan
-                                heat butter and milk over low heat until butter
-                                is melted. Using a potato masher or electric
-                                beater, slowly blend milk mixture into potatoes
-                                until smooth and creamy. Season with salt and
-                                pepper to taste.
-                            </p>
+                            <iframe 
+                            width="560"
+                             height="315" 
+                             src="https://www.youtube.com/embed/8_GU4BVCMPA" 
+                             title="YouTube video player" 
+                             frameborder="0" 
+                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                             allowfullscreen></iframe>
+                            
+                            <div class="newest-post__p-wrap">
+                                <p class="newest-post__p" id="yaboiii">
+                                    Bring a pot of salted water to a boil. Add
+                                    potatoes and cook until tender but still firm,
+                                    about 15 minutes; drain. In a small saucepan
+                                    heat butter and milk over low heat until butter
+                                    is melted. Using a potato masher or electric
+                                    beater, slowly blend milk mixture into potatoes
+                                    until smooth and creamy. Season with salt and
+                                    pepper to taste.
+                                </p>
+                                <div id="newest-post__p--overlay"></div>
+                            </div>
                             <!-- hidden content until read more is clicked -->
                             <div class="newest-post--hidden" id="hidden">
                                 <p>
