linear gradient transparent not working properly?

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     is melted. Using a potato masher or electric
                                     beater, slowly blend milk mixture into potatoes
                                     until smooth and creamy. Season with salt and
-                                    pepper to taste.
+                                    pepper to taste...
                                 </p>
                                 <div id="newest-post__p--overlay"></div>
                             </div>
