added upcoming events section to sidebar

--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
                             </div>
                         </div>
 
-                        <!-- <div class="more-posts">
-                                    
-                        </div> -->
+                        <div class="more-posts">
+                            <h4>Upcoming Events:</h4>   
+                            <p>No events currently planned</p>         
+                        </div>
                     </div>
                     <!--   main article     -->
                     <article class="newest-post">
