changed the html class name for the new sidebar item

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                             </div>
                         </div>
 
-                        <div class="more-posts">
-                            <h4>Upcoming Events:</h4>   
-                            <p>No events currently planned</p>         
+                        <div class="sidebar__upcoming">
+                            <h3 class="upcoming__h3">Upcoming Events:</h3>   
+                            <p class="upcoming__p">No events currently planned</p>         
                         </div>
                     </div>
                     <!--   main article     -->
