--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <div class="sidebar__item-wrap">
                                 <!-- sidebar item 1 -->
                                 <div class="sidebar__item">
-                                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Uf8iG-cCM7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                   <img src="https://images-na.ssl-images-amazon.com/images/I/81XG3YOSf5L._AC_UY395_.jpg" class="sidebar__img" />
                                     <a href="https://www.youtube.com" target="_blank"  class="sidebar__item-info">
                                         <h4 class="item-info__h4">Orporis iste minus qui</h4>
                                         <p class="item-info__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -74,7 +74,7 @@
                                 </div>
                                 <!-- sidebar item 2 -->
                                 <div class="sidebar__item">
-                                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Fte3ey3L-48" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <img src="https://cms-cdn.thesolesupplier.co.uk/2020/09/Jordan-4-Fire-Red-Front.jpg" class="sidebar__img" />
                                     <a href="https://www.youtube.com" target="_blank" class="sidebar__item-info">
                                         <h4 class="item-info__h4">A commodi eos fugit</h4>
                                         <p class="item-info__p">Esse reprehenderit consectetur voluptates</p>
