added a link button to read more blog posts

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                                     </a>
                                 </div>
 
-
-                              
+                        
                                 <!-- sidebar item 3 -->
                                 <!-- <div class="sidebar__item">
                                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Cyskqnp1j64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -92,6 +91,9 @@
                                     </a>
                                 </div> -->
                             </div>
+                            <!-- this is the view all blog posts link -->
+                            <a class="sidebar__blog-link" href="#!">View all posts</a>
+
                         </div>
 
                         <div class="sidebar__upcoming">
@@ -123,7 +125,7 @@
                             <div class="newest-post__p-wrap">
                                 <p class="newest-post__p" id="yaboiii">
                                     Inventore commodi dolore sunt dolor sequi distinctio earum velit dicta ullam consectetur id itaque illum adipisci, qui minus? Mollitia tenetur iste laborum delectus qui provident exercitationem rerum aliquam.
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit...
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit ducimus unde voluptatem aut incidunt Molestias, omnis quos facilis sequi eveniet nam quia quam impedit...
                                 </p>
                                 <div id="newest-post__p--overlay"></div>
                             </div>
