added the blog page

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                             <li class="nav__li">
                                 <a href="#">ABOUT</a>
                             </li>
-                            <li class="nav__li">
+                            <!-- <li class="nav__li">
                                 <a href="pages/404.html">DROPS</a>
-                            </li>
+                            </li> -->
                             <li class="nav__li">
                                 <a href="pages/404.html">COLLECTION</a>
                             </li>
@@ -92,7 +92,7 @@
                                 </div> -->
                             </div>
                             <!-- this is the view all blog posts link -->
-                            <a class="sidebar__blog-link" href="#!">View all posts</a>
+                            <a class="sidebar__blog-link" href="pages/blog/blog.html">View all posts</a>
 
                         </div>
 
