--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
                 </div>
             </div>
         </section>
+        <script src="navBar.js"></script>
+        <script src="theme.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
