--- a/pages/404.html
+++ b/pages/404.html
@@ -14,7 +14,7 @@
             href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="../../styles.css" />
+        <link rel="stylesheet" href="../styles.css" />
         <title>its yaboiii</title>
     </head>
     <body id="body">
@@ -23,10 +23,7 @@
             <!-- header -->
             <header class="grid-container__header" id="header">
                 <div class="header__logo" id="logo">
-                    <img
-                        src="../../images/iphone5noBG.png"
-                        alt="Yaboiii Logo"
-                    />
+                    <img src="../images/iphone5noBG.png" alt="Yaboiii Logo" />
                 </div>
             </header>
 
@@ -45,16 +42,16 @@
                                 </i>
                             </li>
                             <li class="nav__li">
-                                <a href="../../index.html">HOME</a>
+                                <a href="../index.html">HOME</a>
                             </li>
                             <li class="nav__li">
-                                <a href="#">ABOUT</a>
+                                <a href="#!">ABOUT</a>
                             </li>
                             <li class="nav__li">
-                                <a href="pages/404.html">COLLECTION</a>
+                                <a href="#!">COLLECTION</a>
                             </li>
                             <li class="nav__li">
-                                <a href="pages/404.html">CONTACT</a>
+                                <a href="#!">CONTACT</a>
                             </li>
                         </ul>
                     </nav>
@@ -80,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <script src="../../navBar.js"></script>
-        <script src="../../theme.js"></script>
+        <script src="../navBar.js"></script>
+        <script src="../theme.js"></script>
     </body>
 </html>
