blog item style update
added some hover effects to the blog grid items

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <title>its yaboiii</title>
     </head>
     <body id="body">
+        <!-- this grid defines the header / body / footer
+        ////////////////////////////////////////////////// -->
         <section class="grid-container">
             <header class="grid-container__header" id="header">
                 <div class="header__logo" id="logo">
@@ -26,7 +28,9 @@
             </header>
 
             <div class="grid-container__main-content">
-                <!--  nav    -->
+                <!-- =======
+                       nav  
+                     ======== -->
                 <div class="nav-wrap">
                     <i class="fas fa-bars fa-lg" id="hamburger"></i>
                     <nav class="sticky-nav" id="sticky-navbar">
@@ -56,9 +60,13 @@
                     <div id="darken"></div>
                 </div>
 
-                <!--  content grid    -->
+                <!--  
+                    content grid that holds the main article and sidebar  
+                /////////////////////////////////////////////////////////////-->
                 <section class="main-content__grid">
-                    <!--   sidebar     -->
+                    <!--===========  
+                        sidebar 
+                     ============ -->
                     <div class="main-content__sidebar">
                         <div class="sidebar-wrap">
                             <h3 class="sidebar__h3">Recent Posts</h3>
@@ -132,7 +140,9 @@
                             </p>
                         </div>
                     </div>
-                    <!--   main article     -->
+                    <!-- ============= 
+                         main article  
+                        ==============   -->
                     <article class="newest-post">
                         <main class="newest-post__content-wrap">
                             <div class="title-wrap">
@@ -235,10 +245,13 @@
                         </main>
                     </article>
                 </section>
+                <!-- main content grid ends-->
             </div>
 
             <div class="grid-container__footer">
-                <!-- footer -->
+                <!--========= 
+                     footer
+                   ==========-->
                 <div class="footer__content">
                     <a href="https://www.instagram.com"
                         ><i class="fab fa-instagram fa-2x"></i
