commented out the back to top button

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                             <a href="#yaboiii" id="newest-post__button">
                                 Read more
                             </a>
-                            <a href="#" id="backToTop"> back to top </a>
+                            <!-- <a href="#" id="backToTop"> back to top </a> -->
                         </main>
                     </article>
                 </section>
