more css updates

--- a/pages/404.html
+++ b/pages/404.html
@@ -59,10 +59,10 @@
                 </div>
 
                 <!-- content -->
-                <div class="error-message" id="error">
+                <a href="../index.html" class="error-message" id="error">
                     <i class="fas fa-undo fa-3x"></i>
-                    <a class="home" href="../index.html">return home</a>
-                </div>
+                    <p class="home" href="../index.html">return home</p>
+                </a>
             </div>
             <div class="grid-container__footer">
                 <!-- footer -->
