updated the 404 page and added a link to the blog on the navbar

--- a/pages/404.html
+++ b/pages/404.html
@@ -21,15 +21,15 @@
         <!-- page structure grid -->
         <section class="grid-container">
             <!-- header -->
-            <header class="grid-container__header" id="header">
+            <!-- <header class="grid-container__header" id="header">
                 <div class="header__logo" id="logo">
                     <img src="../images/iphone5noBG.png" alt="Yaboiii Logo" />
                 </div>
-            </header>
+            </header> -->
 
             <div class="grid-container__main-content">
                 <!-- nav -->
-                <div class="nav-wrap">
+                <!-- <div class="nav-wrap">
                     <i class="fas fa-bars fa-lg" id="hamburger"></i>
                     <nav class="sticky-nav" id="sticky-navbar">
                         <i class="fas fa-times fa-lg" id="close"></i>
@@ -56,7 +56,7 @@
                         </ul>
                     </nav>
                     <div id="darken"></div>
-                </div>
+                </div> -->
 
                 <!-- content -->
                 <a href="../index.html" class="error-message" id="error">
@@ -64,8 +64,8 @@
                     <p class="home" href="../index.html">return home</p>
                 </a>
             </div>
-            <div class="grid-container__footer">
-                <!-- footer -->
+            <!-- <div class="grid-container__footer">
+             
                 <div class="footer__content">
                     <a href="https://www.instagram.com"
                         ><i class="fab fa-instagram fa-2x"></i
@@ -75,7 +75,7 @@
                     ></a>
                     <i class="fas fa-envelope fa-2x"></i>
                 </div>
-            </div>
+            </div> -->
         </section>
         <script src="../navBar.js"></script>
         <script src="../theme.js"></script>
