--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                             <li class="nav__li">
                                 <a href="pages/404.html">ABOUT</a>
                             </li>
-                            <!-- <li class="nav__li">
-                                <a href="pages/404.html">DROPS</a>
-                            </li> -->
+                            <li class="nav__li">
+                                <a href="pages/blog/blog.html">BLOG</a>
+                            </li>
                             <li class="nav__li">
                                 <a href="pages/404.html">COLLECTION</a>
                             </li>
